--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -3,7 +3,7 @@
   src: url(../../fonts/DeliciousHandrawn-Regular.ttf);
 }
 .main {
-  margin-left: 200px;
+  margin-left: 12.5rem;
 }
 
 * {
@@ -13,78 +13,53 @@
   font-family: sans-serif, monospace, serif;
 }
 
-#menu {
-  height: 100%;
-  width: 200px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  padding-top: 20px;
-}
-#menu .pfpicon {
+.pfpicon {
   border-radius: 25rem;
   height: 3rem;
   width: 3rem;
   border: 0.1rem solid black;
 }
 
-.img {
+#all {
+  margin-top: 1rem;
+}
+#all #menu {
+  height: 100%;
+  width: 12.5rem;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(21, 109, 216);
+  overflow-x: hidden;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+}
+#all #menu .img {
   border-radius: 25rem;
   height: 11rem;
   width: 11rem;
   border: 0.1rem solid black;
 }
-
-.name {
+#all #menu .name {
   font-family: Goofy;
   color: black;
+  font-size: 2.5rem;
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
 }
-
-.panel {
-  min-height: 200px;
+#all #menu ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
-.panel ul {
-  margin: 0;
-  padding: 0;
-}
-
-.panel ul li {
+#all #menu ul li {
   list-style-type: none;
-  display: inline-block;
-  background: #999;
-  margin: 0;
-  padding: 3px 10px;
-  border-radius: 10px 10px 0 0;
-  color: #fafafa;
-  font-weight: 200;
-  cursor: pointer;
+  font-size: 1.5rem;
+  font-family: Goofy;
 }
-
-.panel ul li:hover {
-  color: #fafafa;
-  background: #666;
-}
-
-.panel ul li.active {
-  color: #fafafa;
-  background: #666;
-}
-
-.panel .tabs {
-  display: none;
-  background: #c9c9c9;
-  padding: 30px;
-  border-radius: 0 0 10px 10px;
-}
-
-.panel .tabs.active {
-  display: block;
-}
-
-p {
+#all p {
   font-family: Goofy;
 }/*# sourceMappingURL=index.css.map */
