--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -13,7 +13,20 @@
   font-family: sans-serif, monospace, serif;
 }
 
-.pfpicon {
+nav {
+  height: 100%;
+  width: 3.5rem;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(21, 109, 216);
+  overflow-x: hidden;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+}
+nav .pfpicon {
   border-radius: 25rem;
   height: 3rem;
   width: 3rem;
@@ -29,7 +42,7 @@
   position: fixed;
   z-index: 1;
   top: 0;
-  left: 0;
+  left: 3rem;
   background-color: rgb(21, 109, 216);
   overflow-x: hidden;
   padding-top: 20px;
@@ -60,6 +73,6 @@
   font-size: 1.5rem;
   font-family: Goofy;
 }
-#all p {
+#all B p {
   font-family: Goofy;
 }/*# sourceMappingURL=index.css.map */
